# spacepilotctl

./: 99-spacenavlcdd.rules  NOTES.md  README.md  lcd.py  pyproject.toml  spacenavlcdctl.py  spacenavlcdd.py  spacenavlcdd.service  spacenavlcdd.toml  spacepilotctl.py
freecad/SpaceNavLCD/: InitGui.py
