[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacepilotctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "easyhid",
    "opencv-python",
]

[tool.setuptools]
py-modules = ["spacepilotctl", "spacenavlcdd", "spacenavlcdctl"]

[project.scripts]
spacepilotctl = "spacepilotctl:main"
spacenavlcdd = "spacenavlcdd:main"
spacenavlcdctl = "spacenavlcdctl:main"
